# DRust

./: .gitignore  Cargo.toml  README.md
applications/dataframe/: Cargo.toml
applications/dataframe/src/: datatypes.rs  error.rs  main.rs  prelude.rs  self_arrow.rs  utils.rs
applications/dataframe/src/benchmark/: groupby.rs  mod.rs  utils.rs
applications/dataframe/src/chunked_array/: chunk.rs  conf.rs  mod.rs  utils.rs
applications/dataframe/src/frame/: groupby.rs  mod.rs  take.rs
applications/dataframe/src/series/: input.rs  mod.rs
applications/gemm/: Cargo.toml  build.rs
applications/gemm/src/: conf.rs  main.rs  par_strassen.rs  single_strassen.rs  utils.rs
applications/kv/: Cargo.toml
applications/kv/src/: benchmark.rs  conf.rs  dmap.rs  entry.rs  main.rs
comm-lib/: Makefile  main.c  rdma-common.c  rdma-common.h  rdma-server-lib.c  rdma-server-lib.h
docs/: library.md  osdi24ae-77.md
drust/: Cargo.toml  drust.json
drust/src/: conf.rs  main.rs  spec.rs
drust/src/app/: mod.rs
drust/src/app/dataframe/: mod.rs  prelude.rs  self_arrow.rs  utils.rs
drust/src/app/dataframe/benchmark/: groupby.rs  utils.rs
drust/src/app/dataframe/chunked_array/: chunk.rs  mod.rs
drust/src/app/dataframe/frame/: groupby.rs  mod.rs  take.rs
drust/src/app/dataframe/series/: input.rs  mod.rs
drust/src/app/gemm/: conf.rs  mod.rs  par_strassen.rs  single_strassen.rs  utils.rs
drust/src/app/kv/: benchmark.rs  conf.rs  dmap.rs  mod.rs
drust/src/app/socialnet/: conf.rs  mod.rs
drust/src/app/test/: mod.rs
drust/src/drust_std/: mod.rs
drust/src/drust_std/alloc/: init.rs  mod.rs
drust/src/drust_std/collections/: dstring.rs  dvec.rs  mod.rs
drust/src/drust_std/comm/: mod.rs
drust/src/drust_std/connect/: dsafepoint.rs  mod.rs
drust/src/drust_std/primitives/: dbox.rs  dmut.rs  dref.rs  mod.rs  tbox.rs
drust/src/drust_std/sync/: dmutex.rs  mod.rs
drust/src/drust_std/thread/: dlink.rs  mod.rs
drust/src/drust_std/utils/: mod.rs
scripts/: copy_executable.sh  global_build.sh  local_build.sh  prerun.sh  run_workload.sh  shutdown.sh
(+9 files in other folders)
